--- a/meson.build
+++ b/meson.build
@@ -7,5 +7,5 @@ systemc_dep = dependency ('systemc')
 math_dep = cxx.find_library('m', required : true)
 deps = [systemc_dep, math_dep]
 
-subdir('memory_pv')
+subdir('memory')
 subdir('adc')
