--- a/memory/pv/meson.build
+++ b/memory/pv/meson.build
@@ -1,19 +1,19 @@
 # Headers
-mem_inc = []
+mem_pv_inc = []
 
 # Source Code
-mem_sources = [
+mem_pv_sources = [
     'memory.cpp'
 ]
 
 # Shared Library
-memlib = shared_library ('memlib',
-                         mem_sources,
-                         include_directories : mem_inc,
+mempvlib = shared_library ('memlib',
+                         mem_pv_sources,
+                         include_directories : mem_pv_inc,
                          dependencies : deps,
                          install : false)
 
 testexe = executable('mempv', 'memory_tb.cpp',
-                     include_directories : mem_inc,
-                     link_with : memlib,
+                     include_directories : mem_pv_inc,
+                     link_with : mempvlib,
                      dependencies : deps)
